--- a/kubernetesb38/manifestfile/nodeportservice.yml
+++ b/kubernetesb38/manifestfile/nodeportservice.yml
@@ -4,7 +4,7 @@ metadata:
         name: nodeport1  #cluster 
 spec:
     selector:
-          app: mypod  
+          app: mypod1  
     type: NodePort
     ports:
     - protocol: TCP
