--- a/kubernetesb37/service/clusteripservice.yml
+++ b/kubernetesb37/service/clusteripservice.yml
@@ -4,7 +4,7 @@ metadata:
       name: clusterip
 spec:
     selector:
-          app:  
+          app:  nginxapp
     type: ClusterIP
     ports:
       - port: 80
