--- a/kubernetesb37/service/pod2.yml
+++ b/kubernetesb37/service/pod2.yml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
         name: nginxapp
-        #  label:
-        #     app: nginxapp
+        label:
+            app: nginxapp1
 spec:
     containers:
         - name: nginxcont
