--- a/kubernetesb37/service/clusteripsvc.yml
+++ b/kubernetesb37/service/clusteripsvc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind:  Service
 metadata:
-      name: clusterip
+      name: clusterip1
 spec:
     selector:
         app:  nginxapp1
