--- a/kubernetesb37/service/pod2.yml
+++ b/kubernetesb37/service/pod2.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
         name: nginxapp1
-        label:
+        labels:
             app: nginxapp1
 spec:
     containers:
