--- a/kubernetesb37/namespace/namespace.yml
+++ b/kubernetesb37/namespace/namespace.yml
@@ -1,1 +1,7 @@
+apiVersion: v1
+kind: Namespace
+metadata: 
+        name: devnamespacenginxapp
+        labels:  
+              app: devnamespacenginxapp
 
