--- a/kubernetesb37/namespace/pods&svc.yml
+++ b/kubernetesb37/namespace/pods&svc.yml
@@ -22,6 +22,7 @@ apiVersion: v1
 kind:  Service
 metadata:
       name: nodeportdev
+      namespace: devnamespacenginxapp
 spec:
     selector:
         app:  nginxappdev
