--- a/kubernetesb38/manifestfile/replicaset/replicasetmatchlabel.yml
+++ b/kubernetesb38/manifestfile/replicaset/replicasetmatchlabel.yml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind:  ReplicaSet
 metadata: 
-       name: webappreplica
+       name: webappreplica2
        labels:
-            app: webappreplica
+            app: webappreplica2
 spec: 
     replicas: 3  #how many replica's you want to create on the basis of template
     template:
       metadata:  #like a tag
          labels: 
-            app: webappreplica
+            app: webappreplica2
       spec:
         containers:
             - name: mypod-cont1
@@ -24,6 +24,6 @@ spec:
                   protocol: TCP
     selector:
           matchLabels:
-                app: webappreplica 
+                app: webappreplica2
           # matchExpressions: 
           #   - {key: app, operator: In, values: [webappreplica, mobappreplica]}
