--- a/kubernetesb37/replicaset/replicacontroller.yml
+++ b/kubernetesb37/replicaset/replicacontroller.yml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1  
-kind: ReplicaSet
+apiVersion: v1  
+kind:  ReplicationController
 metadata: 
       name: replicacontroller
       labels:
