--- a/kubernetesb37/daemonsets/daemonset.yml
+++ b/kubernetesb37/daemonsets/daemonset.yml
@@ -5,7 +5,7 @@ metadata:
         label:
             app: daemoncloudwatchagent
 spec:
-    replicas: 3  #specify number of pod's replica to be created. 
+    #replicas: 3  #specify number of pod's replica to be created. 
     template:
           #write here your pod's script from metadata and spec.
       metadata:
