--- a/kubernetesb37/daemonsets/daemonset.yml
+++ b/kubernetesb37/daemonsets/daemonset.yml
@@ -2,14 +2,14 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata: 
         name: daemoncloudwatchagent
-        label:
+        labels:
             app: daemoncloudwatchagent
 spec:
     #replicas: 3  #specify number of pod's replica to be created. 
     template:
           #write here your pod's script from metadata and spec.
       metadata:
-        name: 
+        name: daemoncloudwatchagentlbs
         labels:
             app: daemoncloudwatchagent
       spec:
