--- a/kubernetesb37/daemonsets/daemonset.yml
+++ b/kubernetesb37/daemonsets/daemonset.yml
@@ -9,7 +9,7 @@ spec:
     template:
           #write here your pod's script from metadata and spec.
       metadata:
-        name: daemoncloudwatchagentlbs
+        name:  daemoncloudwatchagent
         labels:
             app: daemoncloudwatchagent
       spec:
