--- a/kubernetesb37/deployment/deployment.yml
+++ b/kubernetesb37/deployment/deployment.yml
@@ -6,7 +6,7 @@ metadata:
           app: nginxapp
 spec:
     replicas: 14
-    stratergy: 
+    strategy: 
           type: RollingUpdate
           rollingUpdate:
             maxSurge: 2   # Maximum number of pods that can be created over the desired replicas
