--- a/kubernetesb37/deployment/deployment.yml
+++ b/kubernetesb37/deployment/deployment.yml
@@ -11,7 +11,7 @@ spec:
           rollingUpdate:
             maxSurge: 2   # Maximum number of pods that can be created over the desired replicas
             maxUnavailable: 2  # Maximum number of pods that can be unavailable during the update 
-    selectors:
+    selector:
           matchLabels:
               app: nginxapp
     template:
@@ -19,14 +19,14 @@ spec:
                 name: nginxapp 
                 labels:
                       app: nginxapp 
-                spec:
-                    containers:
+          spec:
+              containers:
+                  - name: http
+                    image: nginx 
+                    ports:
                         - name: http
-                          image: nginx 
-                          ports:
-                              - name: http
-                                containerPort: 80
-                                protocol: TCP
+                          containerPort: 80
+                          protocol: TCP
 
 
 
