--- a/kubernetesb38/statefulset/statefulset.yml
+++ b/kubernetesb38/statefulset/statefulset.yml
@@ -27,4 +27,5 @@ spec:
                  - name: MYSQL_ROOT_PASSWORD
                    value: "1234"
     selector:
+        matchLabels:
           app: ss
