--- a/kubernetesb38/configmap/statefulset.yml
+++ b/kubernetesb38/configmap/statefulset.yml
@@ -29,11 +29,11 @@ spec:
                           configMapKeyRef:
                               name: configmap1
                               key: DB_PASSWORD 
-                # - name: MYSQL_USER_NAME
-                #    valueFrom:
-                #           configMapKeyRef:
-                #               name: configmap1
-                #               key: DB_USER 
+                - name: MYSQL_USER_NAME
+                  valueFrom:
+                          configMapKeyRef:
+                              name: configmap1
+                              key: DB_USER 
                           
     selector:
         matchLabels:
