--- a/kubernetesb37/hpa/hpa-deployment.yml
+++ b/kubernetesb37/hpa/hpa-deployment.yml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,24 +18,18 @@ spec:
               app: deployapp   
         spec: 
           containers:
-            - name: frontendapp
-              image: anupdudhe/frontendrds
-              ports:
-                - containerPort: 80
-                  protocol: TCP
-              resources:
-                requests:
-                      memory: "64Mi"   #64mbs of intial memory is provide
-                      cpu: "20m"  #1core = 1000 millcores 125 millicore is initially provided to the pod
-                limits:     
-                      memory: "128Mi"  #128mbs of max limit of memory is provide
-                      cpu: "50m"  #250 millicores is the max amount of limit this pod has.
-              command: ["sh", "-c"]
-              args:
-                - while [ 1 ]; do
-                  echo "Test";
-                  sleep 0.01;
-                  done
+             - name:  deployapp
+               image: anupdudhe/frontendrds
+               ports:
+                  - containerPort: 80
+                    protocol: TCP
+               resources:
+                  requests:
+                        memory: "64Mi"
+                        cpu: "125m"
+                  limits:     
+                        memory: "128Mi"
+                        cpu: "250m"   
 ---
 apiVersion: autoscaling/v2
 kind:  HorizontalPodAutoscaler 
