--- a/kubernetesb37/hpa/hpa-deployment.yml
+++ b/kubernetesb37/hpa/hpa-deployment.yml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,7 +17,7 @@ spec:
               app: deployapp   
         spec: 
           containers:
-             - name:  deployapp
+             - name: frontendapp
                image: anupdudhe/frontendrds
                ports:
                   - containerPort: 80
@@ -29,25 +28,23 @@ spec:
                         cpu: "125m"
                   limits:     
                         memory: "128Mi"
-                        cpu: "250m"   
+                        cpu: "250m"
 ---
 apiVersion: autoscaling/v2
-kind:  HorizontalPodAutoscaler 
+kind: HorizontalPodAutoscaler
 metadata:
-        name: hpa
-        label: 
-            app: hpa 
+  name: hpa
 spec:
-    scaleTargetRef:   # this parameter selects the deployment , of the pods sclaing is done by hpa using this para
-          apiVersion: apps/v1
-          kind: Deployment
-          name: deployapp
-     minReplicas: 1   #when threshold resource is low , then microservice scale down of pods will be 1  
-     maxReplicas: 4   #when threshold resourcce is high or it has touch the threshold point , the microservice scale will go upto 4 pods
-     metrics:
-          - type: Resource
-            resource:
-              name: cpu
-              target:
-                type: Utilization
-                averageUtilization: 50
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: deployapp
+  minReplicas: 1
+  maxReplicas: 4
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
