--- a/kubernetesb38/ingress/ingressrule.yml
+++ b/kubernetesb38/ingress/ingressrule.yml
@@ -8,14 +8,14 @@ metadata:
 spec:
   ingressClassName: nginx  #the class name of your ingress controller , will vary accordingly the type of ingress controller your using
   rules:
-  - host: 
+  - host: a5ff7a28718f1475a860473ad6cb800a-1163411906.ap-southeast-1.elb.amazonaws.com
       paths:
         
          -  path: /    #will route you to the home page of your microservice
             pathType: Prefix  
             backend:   #here you will mention your service which is binded with home page pod
               service: 
-                name: frontendsrv
+                name: frontendsrv   #mention your service name and its respective portno
                 port:
                   number: 80
          -  path: /student
