--- a/k8sB47/config/ss.yml
+++ b/k8sB47/config/ss.yml
@@ -23,7 +23,7 @@ spec:
                   protocol: TCP
             env:
                  - name: MYSQL_ROOT_PASSWORD
-                   valuefrom: 
+                   valueFrom: 
                       configMapKeyRef:
                         name: configmap
                         key: rootpw
