--- a/k8sB47/secrets/ss.yml
+++ b/k8sB47/secrets/ss.yml
@@ -23,7 +23,7 @@ spec:
                   protocol: TCP
             env:
                  - name: MYSQL_ROOT_PASSWORD
-                   valuefrom: 
+                   valueFrom: 
                       SecretKeyRef:
                         name: secrets
                         key: rootpw
