--- a/k8sB47/secrets/ss.yml
+++ b/k8sB47/secrets/ss.yml
@@ -24,6 +24,6 @@ spec:
             env:
                  - name: MYSQL_ROOT_PASSWORD
                    valueFrom: 
-                      SecretKeyRef:
+                      secretKeyRef:
                         name: secrets
                         key: rootpw
