--- a/k8sB47/hpadaemonset.yml
+++ b/k8sB47/hpadaemonset.yml
@@ -45,7 +45,7 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 95
+      averageUtilization: 50: 95
 
 #        - type: Resource
 #          resource:
