--- a/k8sB47/hpadaemonset.yml
+++ b/k8sB47/hpadaemonset.yml
@@ -42,10 +42,12 @@ spec:
   minReplicas: 1
   maxReplicas: 3
   metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      averageUtilization:  95
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 95
 
 #        - type: Resource
 #          resource:
