--- a/ingressb25/mobile/service.yml
+++ b/ingressb25/mobile/service.yml
@@ -1,1 +1,13 @@
-
+apiVersion: v1
+kind: Service
+metadata: 
+  name: laptopsrv
+spec:
+  type: ClusterIP
+  selector:
+    app: deployappmob
+  ports:
+    - port: 80
+      targetPort: 80
+      name: httpd
+      protocol: TCP
