--- a/ingressb25/ingressrule.yml
+++ b/ingressb25/ingressrule.yml
@@ -1,1 +1,34 @@
-
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: oneingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: loadbalancer
+    http:
+      paths:
+        
+         -  path: /
+            pathType: Prefix
+            backend:
+              service: 
+                name: frontendsrv
+                port:
+                  number: 80
+         -  path: /student
+            pathType: Prefix
+            backend:
+              service: 
+                name: backendsrv
+                port:
+                  number: 8080
+         -  path: /mobile
+            pathType: Prefix
+            backend:
+              service: 
+                name: mobilesrv
+                port:
+                  number: 80
