--- a/dockerb27/dockerfile
+++ b/dockerb27/dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:20.04
 LABEL maintainer="devopsb27"
-RUN apt update && \ 
-    apt install nginx -y  
-
-COPY index.html /usr/share/nginx/html/index.html
+RUN apt updadte && \ 
+    apt install nginx -y \  
+    echo "hello world" > /usr/share/nginx/html/index.html
+#COPY index.html /usr/share/nginx/html/index.html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
