--- a/dockerb27/studentapp/Docker-compose.yml
+++ b/dockerb27/studentapp/Docker-compose.yml
@@ -1,7 +1,7 @@
 services: 
         studentapp:
            build: .
-           ports: 8080:8080
+           ports: "8080:8080"
            container_name: studentapp_container
            #volumes:
              #- ./src:/opt/apache-tomcat-9.0.106/webapps
