--- a/kubernetesb27/pods_and_services/pods.yml
+++ b/kubernetesb27/pods_and_services/pods.yml
@@ -2,10 +2,24 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: my-pod
+  labels:
+    app: my-pod
 spec:
   containers:
   - name: new-container
     image: nginx:latest
     ports:
     - containerPort: 80
-  
+--- 
+apiVersion: v1
+kind: Service 
+metadata:
+  name: my-service
+spec:
+  selector:   
+    app: my-pod
+  ports:
+  - protocol: TCP
+    port: 80
+    #targetPort: 80
+  type: ClusterIP
