--- a/kubernetesb27/pods_and_services/deployment.yml
+++ b/kubernetesb27/pods_and_services/deployment.yml
@@ -25,7 +25,7 @@ spec:
       spec:
         containers:
           - name: nginxapp
-            image: httpd:latest 
+            image: nginx:latest 
             ports:
                 - containerPort: 80
                   protocol: TCP
