--- a/kubernetesb27/pods_and_services/config/ss.yml
+++ b/kubernetesb27/pods_and_services/config/ss.yml
@@ -21,4 +21,7 @@ spec:
         - containerPort: 3306
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: "1234"
+          valuefrom:
+            configMapKeyRef:
+              name: config
+              key: rootpw
