--- a/kubernetesb27/pods_and_services/config/ss.yml
+++ b/kubernetesb27/pods_and_services/config/ss.yml
@@ -21,7 +21,7 @@ spec:
         - containerPort: 3306
         env:
         - name: MYSQL_ROOT_PASSWORD
-          valuefrom:
+          valueFrom:
             configMapKeyRef:
               name: config
               key: rootpw
