--- a/kubernetesb27/pods_and_services/secrets/ss.yml
+++ b/kubernetesb27/pods_and_services/secrets/ss.yml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: statefulset
+  name: statefulset2
   labels:
-    app: newapp
+    app: newapp2
 spec:
-  replicas: 4
+  replicas: 2
   selector:
     matchLabels:
-      app: newapp
+      app: newapp2
   template:
     metadata:
       labels:
-        app: newapp
+        app: newapp2
     spec:
       containers:
       - name: db-container
