--- a/kubernetesb27/pods_and_services/secrets/ss.yml
+++ b/kubernetesb27/pods_and_services/secrets/ss.yml
@@ -23,5 +23,5 @@ spec:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             SecretKeyRef:
-              name: config
+              name: secrets
               key: rootpw
