--- a/kubernetesb27/pods_and_services/secrets/ss.yml
+++ b/kubernetesb27/pods_and_services/secrets/ss.yml
@@ -22,6 +22,6 @@ spec:
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
-            SecretKeyRef:
+            secretKeyRef:
               name: secrets
               key: rootpw
