--- a/kubernetesb27/pods_and_services/pods.yml
+++ b/kubernetesb27/pods_and_services/pods.yml
@@ -8,6 +8,13 @@ spec:
   containers:
   - name: new-container
     image: nginx:latest
+    resources: 
+        requests:    #starting point of our pod's resouce
+             cpu: "25m"
+             memory: "50Mi"
+        limits:      #endpoint point of ours pod's resource
+            cpu: "50m"
+            memory: "100Mi"  
     ports:
     - containerPort: 80
 --- 
