--- a/kubernetesb27/pods_and_services/ingress/ingressrule.yml
+++ b/kubernetesb27/pods_and_services/ingress/ingressrule.yml
@@ -22,6 +22,6 @@ spec:
             pathType: Prefix
             backend:
               service: 
-                name: deployapptomcat
+                name: tomcatsrv
                 port:
                   number: 8080
