--- a/dockerb28/helloworld/Docker-compose.yml
+++ b/dockerb28/helloworld/Docker-compose.yml
@@ -1,8 +1,8 @@
 services:
-      studentapp:
+      helloworldapp:
         build: .
         ports:
-          - "8080:8080"
+          - "80:80"
         #volumes:
         #  - .:/app
         #networks:
