--- a/k8sb28/hpa/hpa-deployment.yml
+++ b/k8sb28/hpa/hpa-deployment.yml
@@ -24,7 +24,7 @@ spec:
                         limits:
                             cpu: "100m"    #ending resource point for pod
                             memory: "100Mi"
-                    Ports:
+                    ports:
                          - name: http
                            containerPort: 80
                            protocol: TCP                            
