--- a/k8sb28/hpa/hpa-deployment.yml
+++ b/k8sb28/hpa/hpa-deployment.yml
@@ -16,7 +16,7 @@ spec:
           spec:
               containers:
                   - name: http
-                    image: ubuntu:latest
+                    image:  nginx:latest
                     resources: 
                         requests:
                             cpu: "100m"   #1000millicore = 1 core ,  starting resource point for pod 
