--- a/dockerb61/samplehellloworlddockerfile/Dockerfile
+++ b/dockerb61/samplehellloworlddockerfile/Dockerfile
@@ -5,7 +5,7 @@ LABEL dev="anup"
 #keyvalue tags and labels 
 
 #executed commands in the dockerfile
-RUN apt-get update httpd unzip -y \
+RUN apt-get update httpd unzip -y &\
     rm /var/www/html/index.html 
 
 #downloaded and add the zip file to the specified location
@@ -15,7 +15,7 @@ ADD https://templatemo.com/download/templatemo_562_space_dynamic   /var/www/html
 WORKDIR /var/www/html  
 
 #unzip the file and move the contents to the specified location
-RUN unzip templatemo_562_space_dynamic.zip \
+RUN unzip templatemo_562_space_dynamic.zip &\
     mv templatemo_562_space_dynamic/templatemo_562_space_dynamic/* .  
 
 
