--- a/dockerb61/samplehellloworlddockerfile/Dockerfile
+++ b/dockerb61/samplehellloworlddockerfile/Dockerfile
@@ -24,8 +24,8 @@ RUN unzip templatemo_562_space_dynamic.zip && \
 EXPOSE 80 
 
 #command to run the apache server in foreground mode
-CMD ["httpd-foreground"]
-
+#CMD ["httpd-foreground"]
+CMD ["apache2ctl", "-D", "FOREGROUND"]
 
 
 
