--- a/dockerb61/studentapp/Dockerfile
+++ b/dockerb61/studentapp/Dockerfile
@@ -22,7 +22,7 @@ COPY context.xml apache-tomcat-9.0.111/conf/
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war /opt/apache-tomcat-9.0.111/webapps/student.war
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar /opt/apache-tomcat-9.0.111/lib/mysql-connector.jar
 #remote copy of war file and mysql-connector jar file
-RUN chmod +x /opt/apache-tomcat-9.0.111/bin/*.sh
+RUN chmod +x /opt/apache-tomcat-9.0.111/bin/catalina.sh
 
 
 EXPOSE 8080 
