--- a/dockerb61/studentapp/Dockerfile
+++ b/dockerb61/studentapp/Dockerfile
@@ -15,14 +15,14 @@ RUN unzip /opt/apache-tomcat-9.0.111.zip
 #ran unzip command 
 
 
-WORKDIR /opt/apache-tomcat-9.0.111
+WORKDIR /opt/apache-tomcat-9.0.111/bin
 #changing working directory  
 COPY context.xml apache-tomcat-9.0.111/conf/ 
 #LOCALly copying context.xml to conf folder of tomcat
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war /opt/apache-tomcat-9.0.111/webapps/student.war
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar /opt/apache-tomcat-9.0.111/lib/mysql-connector.jar
 #remote copy of war file and mysql-connector jar file
-RUN chmod +x /opt/apache-tomcat-9.0.111/bin/catalina.sh
+RUN chmod +x catalina.sh
 
 
 EXPOSE 8080 
