--- a/dockerb61/studentapp/Dockerfile
+++ b/dockerb61/studentapp/Dockerfile
@@ -22,6 +22,7 @@ COPY context.xml apache-tomcat-9.0.111/conf/
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war /opt/apache-tomcat-9.0.111/webapps/student.war
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar /opt/apache-tomcat-9.0.111/lib/mysql-connector.jar
 #remote copy of war file and mysql-connector jar file
+USER root
 RUN chmod +x catalina.sh
 
 
