--- a/k8sb61/pods&svc/secrets/ss.yml
+++ b/k8sb61/pods&svc/secrets/ss.yml
@@ -22,6 +22,6 @@ spec:
             env:
               - name: MYSQL_ROOT_PASSWORD
                 valueFrom:
-                      secretkeyref:
+                      secretKeyRef:
                         name: secrets
                         key: db1key
