--- a/k8sb61/pods&svc/secrets/secrets.yml
+++ b/k8sb61/pods&svc/secrets/secrets.yml
@@ -1,9 +1,9 @@
 apiVersion:  v1
 kind:  Secret
 metadata:
-   name: dbsecret 
+   name: secrets 
    labels:
-     app: dbsecret
+     app: secrets
 data: 
     db1key: MTIzNDU2Nzg=  #dev 
     db2key: YWJjZGVmZw==
