--- a/dockerb32/sampleapp/Dockerfile
+++ b/dockerb32/sampleapp/Dockerfile
@@ -10,7 +10,7 @@ ADD https://templatemo.com/download/templatemo_578_first_portfolio /var/www/html
 #in here we have downloaded a sample webapp from internet and added to our apache server root directory
 
 RUN rm -rf /var/www/html/index.html && \
-    unzip /var/www/html/templatemo_578_first_portfolio.zip -d /var/www/html/ && \
+    unzip /var/www/html/templatemo_578_first_portfolio.zip  && \
     mv /var/www/html/templatemo_578_first_portfolio/* /var/www/html/
 #in here we have removed the default index.html file of apache server and unzipped the downloaded webapp 
 #and moved all the content to apache server root directory
