--- a/dockerb32/studentapp/Dockerfile
+++ b/dockerb32/studentapp/Dockerfile
@@ -29,5 +29,8 @@ COPY context.xml /opt/apache-tomcat-9.0.113/conf/
 
 EXPOSE 8080
 
+RUN chmod +x /opt/apache-tomcat-9.0.113/bin/catalina.sh
+#giving execute permission to catalina.sh file
+
 CMD ["/opt/apache-tomcat-9.0.113/bin/catalina.sh", "run"]
 #exposing port 8080 and running the tomcat server
