--- a/k8sb32/pods_ci.yml
+++ b/k8sb32/pods_ci.yml
@@ -1,7 +1,8 @@
 apiVersion: v1 
 metadata: 
-     name: pod-ci 
-     app: podci  #tags  
+      name: pod-ci 
+      labels:
+        app: podci  #tags  
 kind:  Pod
 spec: 
      containers:
@@ -22,3 +23,6 @@ spec:
       - protocol: TCP 
         port: 80 
         targetPort: 80
+        type: ClusterIP
+
+ #kubectl expose pod cipod  --port=80 --target-port=80 --type=ClusterIP
