--- a/k8sb32/pods_ci.yml
+++ b/k8sb32/pods_ci.yml
@@ -7,7 +7,7 @@ kind:  Pod
 spec: 
      containers:
       - name: nginx-container 
-        image: nginx-latest 
+        image: nginx
         ports:
           - containerPort: 80
 
