--- a/k8sb32/deployment.yml
+++ b/k8sb32/deployment.yml
@@ -22,6 +22,6 @@ spec:
     spec: 
       containers:
         - name: nginx-container 
-          image: httpd     #v1
+          image: httpd:latest     #v1
           ports:
             - containerPort: 80
