--- a/k8sb32/statefull.yml
+++ b/k8sb32/statefull.yml
@@ -2,12 +2,12 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: ssdb
-  label: 
+  labels: 
     app: ssdb
 spec:
   replicas: 3
   selector:
-    matchlabels:
+    matchLabels:
       app: ssdb
   template:
     metadata:
