--- a/k8sb32/secrets/ss.yml
+++ b/k8sb32/secrets/ss.yml
@@ -24,6 +24,6 @@ spec:
         env:
           - name: MYSQL_ROOT_PASSWORD
             valueFrom:
-              secretkeyref:
+              secretKeyRef:
                 name: mysql-secret
                 key: root_pw 
