--- a/k8sb32/configmap/ss.yml
+++ b/k8sb32/configmap/ss.yml
@@ -13,7 +13,7 @@ spec:
     metadata:
       name: ssdb2 
       labels:
-        app: ssdb
+        app: ssdb2
     spec:
       containers:
       - name: ssdbcont2
