--- a/k8sb32/pv_pvc/pv.yml
+++ b/k8sb32/pv_pvc/pv.yml
@@ -12,6 +12,7 @@ spec:
     storageClassName: standard #matches with pvc and depends on the type of external volume
     volumeMode: Filesystem #since ebs is used we use this volume mode
     persistentVolumeReclaimPolicy: Retain #data will be retained even after pv is deleted
-    hostPath: "/mnt/data/nginxvol1" 
+    hostPath: 
+      path: "/mnt/data/nginxvol1" 
 
     #ensure accessModes, storageClassName and volumeMode matches with pvc
