--- a/k8sb32/ingress/ingressrule.yml
+++ b/k8sb32/ingress/ingressrule.yml
@@ -24,4 +24,10 @@ spec:
                 name: ci-tomcatappservice
                 port:
                   number: 8080
-              
+          - path: /httpd
+            pathType: Prefix
+            backend:
+              service:
+                name: ci-httpdappservice
+                port:
+                  number: 81
