--- a/dockerb64/studentapp/docker-compose.yml
+++ b/dockerb64/studentapp/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: studentapp
     volumes:
       - .:/opt/apache-tomcat-9.0.115/webapps
-    network_mode: "host"
+    #network_mode: "host"
   #attendanceapp: 
      #build: ../attendanceapp/ 
      #ports: 
