--- a/kubernetesb64/pods.yml
+++ b/kubernetesb64/pods.yml
@@ -2,8 +2,8 @@ apiVersion:  v1  #default library and dependency for pod
 kind: Pod  # default unique identity of the object
 metadata: 
   name: nginxcipod  #name for the pod 
-  label:
-	app: nginxcipod  #label which will be referenced by the selector
+  labels:
+	 app: nginxcipod  #label which will be referenced by the selector
 spec: #provides specifications of the object that you are creating
   containers:
   - name: nginx 
