--- a/kubernetesb64/service.yml
+++ b/kubernetesb64/service.yml
@@ -8,7 +8,7 @@ spec:
     selector:
          app: nginx 
     ports:
-       protocol: TCP
-       port: 80
+       - protocol: TCP
+         port: 80
     type: ClusterIP
     
