--- a/kubernetesb64/ns-svc-pod.yml
+++ b/kubernetesb64/ns-svc-pod.yml
@@ -1,7 +1,8 @@
 apiVersion:  v1  
 kind: Pod  
 metadata: 
-  name: nginxnp 
+  name: nginxnp
+  namespace: amazonns 
   labels: 
    app: nginxnp
 spec: 
@@ -15,6 +16,7 @@ apiVersion:  v1
 kind: Service
 metadata:
    name: nodeport
+   namespace: amazonns
    labels:
      app: nodeport
 spec:
@@ -25,4 +27,10 @@ spec:
          port: 80
          targetPort: 80
     type: NodePort
-    
+--- 
+apiVersion: v1 
+kind: Namespace
+metadata: 
+  name: amazonns
+  labels:
+    app: amazonns
