--- a/kubernetesb64/rs_matchlabels.yml
+++ b/kubernetesb64/rs_matchlabels.yml
@@ -1,9 +1,9 @@
 apiVersion:  apps/v1 
 kind: ReplicaSet
 metadata: 
-   name: rs-notin
+   name: rsml
    labels:
-      app: rs-notin
+      app: rsml
 spec:
   selector:
     matchLabels: 
