--- a/kubernetesb64/daemonset.yml
+++ b/kubernetesb64/daemonset.yml
@@ -5,8 +5,9 @@ metadata:
   labels:
     app:  ds 
 spec:
-   #selector:
-      #app: cwatchagent
+   selector:
+      matchLabels:
+        app: cwatchagent
    template:
       metadata: 
         name: cwatchagent 
